# fastapi-rest-async

./: LICENSE  README.md  pyproject.toml
src/: .env.example  __init__.py  main.py
src/apps/: __init__.py  routers.py
src/apps/auth/: dependence.py  manager.py  models.py  oauth2.py  routers.py  schemas.py
src/common/: __init__.py  log.py  redis.py  task.py
src/common/exception/: errors.py  exception_handler.py
src/common/response/: __init__.py  response_code.py  response_schemas.py
src/core/: __init__.py  config.py  path_config.py  registry.py
src/database/: __init__.py  connection.py
src/utils/: __init__.py  encoders.py  health_check.py  openapi.py
