[tool.poetry]
name = "fastapi-rest-async"
version = "0.1.0"
description = ""
authors = ["lowell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
fastapi-users = {extras = ["beanie"], version = "^12.1.0"}
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "1.10.12"
loguru = "^0.7.0"
redis = {extras = ["hiredis"], version = "^4.6.0"}
apscheduler = "^3.10.1"
httpx-oauth = "^0.13.0"
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
